--- a/Medium/style.css
+++ b/Medium/style.css
@@ -1,6 +1,8 @@
 body{
   margin:0px;
   background-color: lightgray;
+  display:flex;
+  //flex-direction:row;
 }
 
 h1{
@@ -18,7 +20,10 @@ h4{
 h5{
   margin:0px;
 }
-#game{
+
+
+
+#medium_game{
   display:flex;
   flex-direction:column;
   border-style:solid;
@@ -29,7 +34,7 @@ h5{
   height:670px;
   margin:auto;
 }
-.top-area{
+.medium_top_area{
   margin:auto;
   margin-top:0px;
   width:560px;
@@ -49,6 +54,74 @@ h5{
   width:560px;
   grid-template-columns:repeat(16,35px);
 }
+
+
+#easy_game{
+  display:flex;
+  flex-direction:column;
+  border-style:solid;
+  border-color:#282828;
+  border-width:10px;
+  border-bottom-width:10px;
+  width:420px;
+  height:420px;
+  margin:auto;
+}
+.easy_top_area{
+  margin:auto;
+  margin-top:0px;
+  width:400px;
+  border-style:solid;
+  border-color:#474747;
+  border-width:10px;
+  border-radius: 25px;
+  display:flex;
+  align-items: center;
+}
+.easy_grid_of_buttons{
+  text-align:center;
+  border-style:solid;
+  border-width:5px;
+  margin:auto;
+  margin-top:0px;
+  width:315px;
+  grid-template-columns:repeat(9,35px);
+}
+
+
+#hard_game{
+  display:flex;
+  flex-direction:column;
+  border-style:solid;
+  border-color:#282828;
+  border-width:10px;
+  border-bottom-width:10px;
+  width:1070px;
+  height:670px;
+  margin:auto;
+}
+.hard_top_area{
+  margin:auto;
+  margin-top:0px;
+  width:1050px;
+  border-style:solid;
+  border-color:#474747;
+  border-width:10px;
+  border-radius: 25px;
+  display:flex;
+  align-items: center;
+}
+.hard_grid_of_buttons{
+  text-align:center;
+  border-style:solid;
+  border-width:5px;
+  margin:auto;
+  margin-top:0px;
+  width:1050px;
+  grid-template-columns:repeat(30,35px);
+}
+
+
 
 .grid_button{
   margin: 0px;
@@ -75,10 +148,19 @@ h5{
   background-color:black;
   padding:5px;
 }
+#easy_restart{
+  background-color:yellow;
+  text-align:center;
+  width:20%;
+  font-size: 300%;
+  margin-left:auto;
+  margin-right:auto;
+  padding:5px;
+}
 #restart{
   background-color:yellow;
   text-align:center;
-  width:10%;
+  width:11%;
   font-size: 300%;
   margin-left:auto;
   margin-right:auto;
@@ -99,7 +181,6 @@ h5{
 .difficulty_options{
   display: none;
   position: absolute;
-  margin-top:5%;
   top:7.5%;
   left:0.5%;
   font-size:1.5em;
@@ -119,17 +200,20 @@ h5{
   left:0.5%;
   cursor:pointer;
   position:absolute;
-  font-size:2.3em;
+  font-size:220%;
   border-style:solid;
   border-width:8px;
   border-bottom-width:5px;
   width:12%;
+  height:6%;
   display:flex;
   justify-content:center;
 }
+
 
 .difficulty:hover + .difficulty_options,.difficulty_options:hover{
   display:flex;
   flex-direction: column;
   align-items: center;
 }
+
